output/LoocParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g 2017-03-02 17:45:29

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;

import org.antlr.runtime.tree.*;

public class LoocParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDF_CLASS", "IDF", "CSTE_ENT", "CSTE_CHAINE", "SUB", "MUL", "ADD", "EQ", "NEQ", "LT", "GT", "LE", "GE", "CSTE_COMM", "WS", "'class'", "'inherit'", "'='", "'('", "')'", "'var'", "':'", "';'", "'int'", "'string'", "'method'", "'{'", "'}'", "','", "':='", "'if'", "'then'", "'else'", "'fi'", "'for'", "'in'", "'..'", "'do'", "'end'", "'nil'", "'write'", "'read'", "'return'", "'this'", "'super'", "'new'", "'.'"
    };
    public static final int LT=13;
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int IDF=5;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int SUB=8;
    public static final int EOF=-1;
    public static final int CSTE_CHAINE=7;
    public static final int T__19=19;
    public static final int CSTE_COMM=17;
    public static final int EQ=11;
    public static final int T__50=50;
    public static final int ADD=10;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int GE=16;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int IDF_CLASS=4;
    public static final int MUL=9;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=18;
    public static final int NEQ=12;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int GT=14;
    public static final int CSTE_ENT=6;
    public static final int LE=15;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "print_func_suite", "return_func", "read_func", "expr_optionnal_func", 
        "mult_expression", "instruction", "class_decl", "method_decl", "method_decl_suite", 
        "add", "multi", "expr", "class_item_decl", "var_decl", "comp", "print_func", 
        "method_args", "expression", "instruction_suite", "prog", "add_expression", 
        "type"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public LoocParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public LoocParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this,port,adaptor);
            setDebugListener(proxy);
            setTokenStream(new DebugTokenStream(input,proxy));
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
            TreeAdaptor adap = new CommonTreeAdaptor();
            setTreeAdaptor(adap);
            proxy.setTreeAdaptor(adap);
        }
    public LoocParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);

         
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }

    protected DebugTreeAdaptor adaptor;
    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = new DebugTreeAdaptor(dbg,adaptor);

    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }


    public String[] getTokenNames() { return LoocParser.tokenNames; }
    public String getGrammarFileName() { return "/home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:8:1: prog : ( class_decl )* ( var_decl )* ( instruction )+ ;
    public final LoocParser.prog_return prog() throws RecognitionException {
        LoocParser.prog_return retval = new LoocParser.prog_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        LoocParser.class_decl_return class_decl1 = null;

        LoocParser.var_decl_return var_decl2 = null;

        LoocParser.instruction_return instruction3 = null;



        try { dbg.enterRule(getGrammarFileName(), "prog");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(8, 1);

        try {
            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:8:5: ( ( class_decl )* ( var_decl )* ( instruction )+ )
            dbg.enterAlt(1);

            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:8:20: ( class_decl )* ( var_decl )* ( instruction )+
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(8,20);
            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:8:20: ( class_decl )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==19) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:8:20: class_decl
            	    {
            	    dbg.location(8,20);
            	    pushFollow(FOLLOW_class_decl_in_prog46);
            	    class_decl1=class_decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, class_decl1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(8,32);
            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:8:32: ( var_decl )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==24) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:8:32: var_decl
            	    {
            	    dbg.location(8,32);
            	    pushFollow(FOLLOW_var_decl_in_prog49);
            	    var_decl2=var_decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, var_decl2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}

            dbg.location(8,42);
            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:8:42: ( instruction )+
            int cnt3=0;
            try { dbg.enterSubRule(3);

            loop3:
            do {
                int alt3=2;
                try { dbg.enterDecision(3);

                int LA3_0 = input.LA(1);

                if ( (LA3_0==IDF||LA3_0==30||LA3_0==34||LA3_0==38||LA3_0==41||(LA3_0>=44 && LA3_0<=46)) ) {
                    alt3=1;
                }


                } finally {dbg.exitDecision(3);}

                switch (alt3) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:8:42: instruction
            	    {
            	    dbg.location(8,42);
            	    pushFollow(FOLLOW_instruction_in_prog52);
            	    instruction3=instruction();

            	    state._fsp--;

            	    adaptor.addChild(root_0, instruction3.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt3++;
            } while (true);
            } finally {dbg.exitSubRule(3);}


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(8, 54);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "prog");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "prog"

    public static class class_decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "class_decl"
    // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:10:1: class_decl : 'class' IDF_CLASS ( 'inherit' IDF_CLASS )? '=' '(' class_item_decl ')' ;
    public final LoocParser.class_decl_return class_decl() throws RecognitionException {
        LoocParser.class_decl_return retval = new LoocParser.class_decl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal4=null;
        Token IDF_CLASS5=null;
        Token string_literal6=null;
        Token IDF_CLASS7=null;
        Token char_literal8=null;
        Token char_literal9=null;
        Token char_literal11=null;
        LoocParser.class_item_decl_return class_item_decl10 = null;


        Object string_literal4_tree=null;
        Object IDF_CLASS5_tree=null;
        Object string_literal6_tree=null;
        Object IDF_CLASS7_tree=null;
        Object char_literal8_tree=null;
        Object char_literal9_tree=null;
        Object char_literal11_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "class_decl");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(10, 1);

        try {
            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:10:11: ( 'class' IDF_CLASS ( 'inherit' IDF_CLASS )? '=' '(' class_item_decl ')' )
            dbg.enterAlt(1);

            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:10:20: 'class' IDF_CLASS ( 'inherit' IDF_CLASS )? '=' '(' class_item_decl ')'
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(10,20);
            string_literal4=(Token)match(input,19,FOLLOW_19_in_class_decl67); 
            string_literal4_tree = (Object)adaptor.create(string_literal4);
            adaptor.addChild(root_0, string_literal4_tree);

            dbg.location(10,28);
            IDF_CLASS5=(Token)match(input,IDF_CLASS,FOLLOW_IDF_CLASS_in_class_decl69); 
            IDF_CLASS5_tree = (Object)adaptor.create(IDF_CLASS5);
            adaptor.addChild(root_0, IDF_CLASS5_tree);

            dbg.location(10,38);
            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:10:38: ( 'inherit' IDF_CLASS )?
            int alt4=2;
            try { dbg.enterSubRule(4);
            try { dbg.enterDecision(4);

            int LA4_0 = input.LA(1);

            if ( (LA4_0==20) ) {
                alt4=1;
            }
            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:10:40: 'inherit' IDF_CLASS
                    {
                    dbg.location(10,40);
                    string_literal6=(Token)match(input,20,FOLLOW_20_in_class_decl73); 
                    string_literal6_tree = (Object)adaptor.create(string_literal6);
                    adaptor.addChild(root_0, string_literal6_tree);

                    dbg.location(10,50);
                    IDF_CLASS7=(Token)match(input,IDF_CLASS,FOLLOW_IDF_CLASS_in_class_decl75); 
                    IDF_CLASS7_tree = (Object)adaptor.create(IDF_CLASS7);
                    adaptor.addChild(root_0, IDF_CLASS7_tree);


                    }
                    break;

            }
            } finally {dbg.exitSubRule(4);}

            dbg.location(10,63);
            char_literal8=(Token)match(input,21,FOLLOW_21_in_class_decl80); 
            char_literal8_tree = (Object)adaptor.create(char_literal8);
            adaptor.addChild(root_0, char_literal8_tree);

            dbg.location(10,67);
            char_literal9=(Token)match(input,22,FOLLOW_22_in_class_decl82); 
            char_literal9_tree = (Object)adaptor.create(char_literal9);
            adaptor.addChild(root_0, char_literal9_tree);

            dbg.location(10,71);
            pushFollow(FOLLOW_class_item_decl_in_class_decl84);
            class_item_decl10=class_item_decl();

            state._fsp--;

            adaptor.addChild(root_0, class_item_decl10.getTree());
            dbg.location(10,87);
            char_literal11=(Token)match(input,23,FOLLOW_23_in_class_decl86); 
            char_literal11_tree = (Object)adaptor.create(char_literal11);
            adaptor.addChild(root_0, char_literal11_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(10, 90);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "class_decl");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "class_decl"

    public static class class_item_decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "class_item_decl"
    // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:12:1: class_item_decl : ( var_decl )* ( method_decl )* ;
    public final LoocParser.class_item_decl_return class_item_decl() throws RecognitionException {
        LoocParser.class_item_decl_return retval = new LoocParser.class_item_decl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        LoocParser.var_decl_return var_decl12 = null;

        LoocParser.method_decl_return method_decl13 = null;



        try { dbg.enterRule(getGrammarFileName(), "class_item_decl");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(12, 1);

        try {
            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:12:16: ( ( var_decl )* ( method_decl )* )
            dbg.enterAlt(1);

            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:12:20: ( var_decl )* ( method_decl )*
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(12,20);
            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:12:20: ( var_decl )*
            try { dbg.enterSubRule(5);

            loop5:
            do {
                int alt5=2;
                try { dbg.enterDecision(5);

                int LA5_0 = input.LA(1);

                if ( (LA5_0==24) ) {
                    alt5=1;
                }


                } finally {dbg.exitDecision(5);}

                switch (alt5) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:12:20: var_decl
            	    {
            	    dbg.location(12,20);
            	    pushFollow(FOLLOW_var_decl_in_class_item_decl97);
            	    var_decl12=var_decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, var_decl12.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);
            } finally {dbg.exitSubRule(5);}

            dbg.location(12,30);
            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:12:30: ( method_decl )*
            try { dbg.enterSubRule(6);

            loop6:
            do {
                int alt6=2;
                try { dbg.enterDecision(6);

                int LA6_0 = input.LA(1);

                if ( (LA6_0==29) ) {
                    alt6=1;
                }


                } finally {dbg.exitDecision(6);}

                switch (alt6) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:12:30: method_decl
            	    {
            	    dbg.location(12,30);
            	    pushFollow(FOLLOW_method_decl_in_class_item_decl100);
            	    method_decl13=method_decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, method_decl13.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);
            } finally {dbg.exitSubRule(6);}


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(12, 43);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "class_item_decl");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "class_item_decl"

    public static class var_decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_decl"
    // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:14:1: var_decl : 'var' IDF ':' type ';' ;
    public final LoocParser.var_decl_return var_decl() throws RecognitionException {
        LoocParser.var_decl_return retval = new LoocParser.var_decl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal14=null;
        Token IDF15=null;
        Token char_literal16=null;
        Token char_literal18=null;
        LoocParser.type_return type17 = null;


        Object string_literal14_tree=null;
        Object IDF15_tree=null;
        Object char_literal16_tree=null;
        Object char_literal18_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "var_decl");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(14, 1);

        try {
            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:14:9: ( 'var' IDF ':' type ';' )
            dbg.enterAlt(1);

            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:14:20: 'var' IDF ':' type ';'
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(14,20);
            string_literal14=(Token)match(input,24,FOLLOW_24_in_var_decl118); 
            string_literal14_tree = (Object)adaptor.create(string_literal14);
            adaptor.addChild(root_0, string_literal14_tree);

            dbg.location(14,26);
            IDF15=(Token)match(input,IDF,FOLLOW_IDF_in_var_decl120); 
            IDF15_tree = (Object)adaptor.create(IDF15);
            adaptor.addChild(root_0, IDF15_tree);

            dbg.location(14,30);
            char_literal16=(Token)match(input,25,FOLLOW_25_in_var_decl122); 
            char_literal16_tree = (Object)adaptor.create(char_literal16);
            adaptor.addChild(root_0, char_literal16_tree);

            dbg.location(14,34);
            pushFollow(FOLLOW_type_in_var_decl124);
            type17=type();

            state._fsp--;

            adaptor.addChild(root_0, type17.getTree());
            dbg.location(14,39);
            char_literal18=(Token)match(input,26,FOLLOW_26_in_var_decl126); 
            char_literal18_tree = (Object)adaptor.create(char_literal18);
            adaptor.addChild(root_0, char_literal18_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(14, 43);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "var_decl");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "var_decl"

    public static class type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:16:1: type : ( IDF_CLASS | 'int' | 'string' );
    public final LoocParser.type_return type() throws RecognitionException {
        LoocParser.type_return retval = new LoocParser.type_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set19=null;

        Object set19_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "type");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(16, 1);

        try {
            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:16:5: ( IDF_CLASS | 'int' | 'string' )
            dbg.enterAlt(1);

            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(16,5);
            set19=(Token)input.LT(1);
            if ( input.LA(1)==IDF_CLASS||(input.LA(1)>=27 && input.LA(1)<=28) ) {
                input.consume();
                adaptor.addChild(root_0, (Object)adaptor.create(set19));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(19, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "type");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "type"

    public static class method_decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "method_decl"
    // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:21:1: method_decl : 'method' IDF '(' ( method_args )* ')' method_decl_suite ;
    public final LoocParser.method_decl_return method_decl() throws RecognitionException {
        LoocParser.method_decl_return retval = new LoocParser.method_decl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal20=null;
        Token IDF21=null;
        Token char_literal22=null;
        Token char_literal24=null;
        LoocParser.method_args_return method_args23 = null;

        LoocParser.method_decl_suite_return method_decl_suite25 = null;


        Object string_literal20_tree=null;
        Object IDF21_tree=null;
        Object char_literal22_tree=null;
        Object char_literal24_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "method_decl");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(21, 1);

        try {
            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:21:12: ( 'method' IDF '(' ( method_args )* ')' method_decl_suite )
            dbg.enterAlt(1);

            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:21:15: 'method' IDF '(' ( method_args )* ')' method_decl_suite
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(21,15);
            string_literal20=(Token)match(input,29,FOLLOW_29_in_method_decl192); 
            string_literal20_tree = (Object)adaptor.create(string_literal20);
            adaptor.addChild(root_0, string_literal20_tree);

            dbg.location(21,24);
            IDF21=(Token)match(input,IDF,FOLLOW_IDF_in_method_decl194); 
            IDF21_tree = (Object)adaptor.create(IDF21);
            adaptor.addChild(root_0, IDF21_tree);

            dbg.location(21,28);
            char_literal22=(Token)match(input,22,FOLLOW_22_in_method_decl196); 
            char_literal22_tree = (Object)adaptor.create(char_literal22);
            adaptor.addChild(root_0, char_literal22_tree);

            dbg.location(21,32);
            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:21:32: ( method_args )*
            try { dbg.enterSubRule(7);

            loop7:
            do {
                int alt7=2;
                try { dbg.enterDecision(7);

                int LA7_0 = input.LA(1);

                if ( (LA7_0==IDF) ) {
                    alt7=1;
                }


                } finally {dbg.exitDecision(7);}

                switch (alt7) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:21:32: method_args
            	    {
            	    dbg.location(21,32);
            	    pushFollow(FOLLOW_method_args_in_method_decl198);
            	    method_args23=method_args();

            	    state._fsp--;

            	    adaptor.addChild(root_0, method_args23.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);
            } finally {dbg.exitSubRule(7);}

            dbg.location(21,45);
            char_literal24=(Token)match(input,23,FOLLOW_23_in_method_decl201); 
            char_literal24_tree = (Object)adaptor.create(char_literal24);
            adaptor.addChild(root_0, char_literal24_tree);

            dbg.location(21,49);
            pushFollow(FOLLOW_method_decl_suite_in_method_decl203);
            method_decl_suite25=method_decl_suite();

            state._fsp--;

            adaptor.addChild(root_0, method_decl_suite25.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(21, 67);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "method_decl");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "method_decl"

    public static class method_decl_suite_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "method_decl_suite"
    // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:23:1: method_decl_suite : ( '{' ( var_decl )* ( instruction )+ '}' | ':' type '{' ( var_decl )* ( instruction )+ '}' );
    public final LoocParser.method_decl_suite_return method_decl_suite() throws RecognitionException {
        LoocParser.method_decl_suite_return retval = new LoocParser.method_decl_suite_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal26=null;
        Token char_literal29=null;
        Token char_literal30=null;
        Token char_literal32=null;
        Token char_literal35=null;
        LoocParser.var_decl_return var_decl27 = null;

        LoocParser.instruction_return instruction28 = null;

        LoocParser.type_return type31 = null;

        LoocParser.var_decl_return var_decl33 = null;

        LoocParser.instruction_return instruction34 = null;


        Object char_literal26_tree=null;
        Object char_literal29_tree=null;
        Object char_literal30_tree=null;
        Object char_literal32_tree=null;
        Object char_literal35_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "method_decl_suite");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(23, 1);

        try {
            // /home/etudiants/devouard1u/workspace/PCL/TELECOM_NANCY-PCL-BDDF/Looc.g:23:18: ( '{' ( var_decl )* ( instruction )+ '}' | ':' type '{' ( var_decl )* ( instruction )+ '}' )
            int alt12=2;
            try { dbg.enterDecision(12);

            int LA12_0 = input.LA(1);

            if ( (LA12_0==30) ) {
                alt12=1;
            }
            else if ( (LA12_0==25) ) {
                alt12=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 12, 0, input);
